use right aligned drop down. fixing prLogs functions. Added a dropdown-item

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@
   white-space: normal;
 }
 
+.dropdown-item {
+  background-color: white
+}
 
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 /* Auth Connect/Callback - Modal */
